@@ -43,9 +43,12 @@ public final class UnmodifiableCollectionUtil {
 
     /**
      * Creates an unmodifiable list based on the provided collection.
+     * This does NOT handle null — if called with null it will throw NPE.
+     * This is intentional: see
+     * <a href="https://github.com/hcoles/pitest/issues/1462">pitest issue #1462</a>.
      *
-     * @param collection the collection to create an unmodifiable list from
      * @param <T> the type of elements in the set
+     * @param collection the collection to create an unmodifiable list from
      * @return an unmodifiable list containing the elements from the provided collection
      */
     public static <T> List<T> unmodifiableList(List<T> collection) {
@@ -56,15 +59,15 @@ public final class UnmodifiableCollectionUtil {
      * Creates an unmodifiable list from the provided collection.
      * If the collection is null, returns an empty unmodifiable list.
      *
-     * @param collection the collection to create an unmodifiable list from
      * @param <T> the type of elements in the list
+     * @param collection the collection to create an unmodifiable list from
      * @return an unmodifiable list containing the elements from the provided collection,
      *         or an empty list if the collection is null
      */
     public static <T> List<T> unmodifiableList(Collection<? extends T> collection) {
         final List<T> result;
         if (collection == null) {
-            result = Collections.emptyList();
+            result = List.of();
         }
         else {
             result = List.copyOf(collection);
@@ -75,10 +78,10 @@ public final class UnmodifiableCollectionUtil {
     /**
      * Returns an unmodifiable view of a List containing elements of a specific type.
      *
-     * @param items The List of items to make unmodifiable.
-     * @param elementType The Class object representing the type of elements in the list.
      * @param <S> The generic type of elements in the input Collection.
      * @param <T> The type of elements in the resulting unmodifiable List.
+     * @param items The List of items to make unmodifiable.
+     * @param elementType The Class object representing the type of elements in the list.
      * @return An unmodifiable List containing elements of the specified type.
      */
     public static <S, T> List<T> unmodifiableList(Collection<S> items, Class<T> elementType) {
@@ -90,9 +93,9 @@ public final class UnmodifiableCollectionUtil {
     /**
      * Creates a copy of array.
      *
+     * @param <T> The type of array
      * @param array Array to create a copy of
      * @param length length of array
-     * @param <T> The type of array
      * @return copy of array
      */
     public static <T> T[] copyOfArray(T[] array, int length) {
@@ -102,11 +105,12 @@ public final class UnmodifiableCollectionUtil {
     /**
      * Returns an immutable set containing only the specified object.
      *
-     * @param obj the type of object in the set
      * @param <T> the type of object
+     * @param obj the type of object in the set
      * @return immutable set
      */
     public static <T> Set<T> singleton(T obj) {
-        return Collections.singleton(obj);
+        return Set.of(obj);
     }
+
 }
